# kokoroxide

./: Cargo.toml  README.md
src/: interactive.rs  lib.rs
src/kokoro/: tts.rs
src/test/: identity_test.rs  kokoro_test.rs  test_direct_phonemes.rs  test_raw_tokens.rs
