[package]
name = "kokoroxide"
version = "0.1.5"
edition = "2021"
authors = ["Dhruv Pant <dhruv304c2@gmail.com>"]
description = "A Rust implementation of Kokoro TTS (Text-to-Speech) synthesis"
repository = "https://github.com/dhruv304c2/kokoroxide"
license = "MIT OR Apache-2.0"
keywords = ["tts", "text-to-speech", "kokoro", "audio", "voice-synthesis"]
categories = ["multimedia::audio", "accessibility"]
readme = "README.md"

[build-dependencies]
clang-sys = { version = "1.8", features = ["runtime"] }

[dependencies]
regex = "1.11.0"
ndarray = "0.15"
hound = "3.5"
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
rodio = { version = "0.17", features = ["symphonia-all"] }
